# gitcoin

./: .gitignore  Pipfile  README.md  _bounty.py  _read_github.py  anlys.do  bounty.py  coingecko_scraper.py  event.py  get_bounties.py  gitcoin_api_test.py  gitcoin_scraper.py  github_scraper.py  helpers.py  import_data.sh  profile.do  pyproject.toml  query.py  read_bounties.py  read_events.py  user.py
ado/: center.ado  get_para.ado  groupcf.ado  sumtab.ado
coingecko/: __init__.py  coin.py  scraper.py
data/: bounties_22564.pkl
gitcoin/: __init__.py  bounty2.py  event.py  event2.py  user.py  user2.py
github2/: __init__.py  dataclasses.py  scraper.py
proxy/: proxy.py
sql/: create_schema.sql
